--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <div class="">
           <a href="#">CONTACT</a>
         </div>
+        <div class="blank">
+
+        </div>
+        <div class="circleicon">
+          <img class="circleicon" src="images/IMG_3895.jpg" alt="goblin king"  >
+        </div>
       </div>
       <div class="flex-container">
         <div class="card">
