Added social icons

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/master.css">
-    <title>Nick Cody</title>
+    <title>Blog</title>
   </head>
   <body>
 
@@ -35,8 +35,8 @@
       </div>
       <div class="flex-container">
         <div class="card">
-            <h1>Project 0</h1>
-            <p>Probably some school project</p>
+            <h1>Post 0</h1>
+            <p>Probably some update</p>
         </div>
       </div>
     </div>
