Updated layout and added cloth overlay.

--- a/blog.html
+++ b/blog.html
@@ -3,16 +3,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/master.css">
+    <!-- <link rel="stylesheet" href="styles/master.css"> -->
     <title>Blog</title>
   </head>
   <body>
-
-    <div class="flex-container" id="mainflex">
+    <canvas id="canvas"></canvas>
+    <!-- <div class="flex-container" id="mainflex">
       <div class="flex-container">
         <div>
-          <h2>Hello, I'm </h2>
-          <h2>Nick Cody</h2>
+          <h2>Hello, I'm Nick Cody</h2>
           <p>I'm a computer science student and aspiring developer.</p>
         </div>
         <div class="">
@@ -29,8 +28,8 @@
         </div>
         <div >
           <img class="circleicon" src="images/IMG_3895.jpg" alt="goblin king">
-          <img  src="images/Github-Mark-Light-32px.png" alt="Github">
-          <img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px">
+          <a href="https://github.com/nocody" ><img  src="images/Github-Mark-Light-32px.png" alt="Github"></a>
+          <a href="https://www.linkedin.com/in/njcody/" ><img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px">
         </div>
       </div>
       <div class="flex-container">
@@ -39,6 +38,7 @@
             <p>Probably some update</p>
         </div>
       </div>
-    </div>
+    </div> -->
+    <script type="text/javascript" src="scripts/Cloth.js"></script>
   </body>
 </html>
