--- a/index.html
+++ b/index.html
@@ -3,10 +3,98 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/master.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
     <title>Nick Cody</title>
+    <link rel="stylesheet" href="styles/master.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+
+    <!-- Custom styles for this template -->
+    <link href="styles/cover.css" rel="stylesheet">
+    <link href="styles/master.css" rel="stylesheet">
+    <script type="text/javascript">
+      function on() {
+        document.getElementById("overlay").style.display = "block";
+      }
+
+      function off() {
+        document.getElementById("overlay").style.display = "none";
+      }
+    </script>
+
   </head>
-  <body>
+  <div id="overlay">
+    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
+    <canvas id="canvas"></canvas>
+  </div>
+  <!-- Cover template -->
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+      <header class="mb-auto">
+        <div>
+
+          <h3 class="float-md-start mb-0">Hello, I'm Nick Cody</h3>
+          <!-- <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">Contact</a>
+          </nav> -->
+          <canvas id="canvas"></canvas>
+        </div>
+      </header>
+
+    <main class="px-3 justify-content-center">
+      <h1 class= "justify-content-center">Way to get wripped!</h1>
+      <img class="circleicon justify-content-center" src="images/IMG_3895.jpg" alt="goblin king">
+      <p class="lead">I'm a computer science student and aspiring developer.</p>
+      <p class="lead">
+        Check out my <a href="blog.html">blog</a> if you're intrigued.
+
+      </p>
+    </main>
+
+    <footer class="mt-auto text-white-50">
+      <div >
+        <nav class="nav nav-masthead justify-content-center">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+
+          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#">Contact</a>
+
+          <a href="https://github.com/nocody" ><img  src="images/Github-Mark-Light-32px.png" alt="Github"></a>
+          <a href="https://www.linkedin.com/in/njcody/" ><img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px"></a>
+        </nav>
+
+      </div>
+    </footer>
+  </div>
+<!-- original  -->
+  <!-- <body>
+    <div id="overlay">
+      <button onclick="off()">ENOUGH!</button>
+      <canvas id="canvas"></canvas>
+    </div>
 
     <div class="flex-container" id="mainflex">
       <div class="flex-container">
@@ -29,8 +117,8 @@
         </div>
         <div >
           <img class="circleicon" src="images/IMG_3895.jpg" alt="goblin king">
-          <img  src="images/Github-Mark-Light-32px.png" alt="Github">
-          <img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px">
+          <a href="https://github.com/nocody" ><img  src="images/Github-Mark-Light-32px.png" alt="Github"></a>
+          <a href="https://www.linkedin.com/in/njcody/" ><img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px"></a>
         </div>
       </div>
       <div class="flex-container">
@@ -39,6 +127,19 @@
             <p>Probably some school project</p>
         </div>
       </div>
-    </div>
+    </div> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="scripts/Cloth.js"></script>
+
+    <!-- <script type="text/javascript">
+      function on() {
+        document.getElementById("overlay").style.display = "block";
+      }
+
+      function off() {
+        document.getElementById("overlay").style.display = "none";
+      }
+    </script> -->
   </body>
 </html>
