--- a/index.html
+++ b/index.html
@@ -45,28 +45,36 @@
 
   </head>
   <div id="overlay">
-    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
+    <a href="#" class="btn btn-sm btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
     <canvas id="canvas"></canvas>
   </div>
   <!-- Cover template -->
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
+      <!-- <header class="mb-auto"> -->
       <header class="mb-auto">
         <div>
-
-          <h3 class="float-md-start mb-0">Hello, I'm Nick Cody</h3>
+          <!-- <div id="overlay">
+            <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
+            <canvas id="canvas"></canvas>
+          </div> -->
+          <!-- <h3 class="float-md-start mb-0">Hello, I'm Nick Cody</h3> -->
           <!-- <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#">Projects</a>
             <a class="nav-link" href="#">Contact</a>
           </nav> -->
-          <canvas id="canvas"></canvas>
+          <!-- <canvas id="canvas"></canvas> -->
+          <p>~~~~~~~~~~~~~~~</p>
         </div>
       </header>
 
     <main class="px-3 justify-content-center">
       <h1 class= "justify-content-center">Way to get wripped!</h1>
       <img class="circleicon justify-content-center" src="images/IMG_3895.jpg" alt="goblin king">
+      <p>~~~~~~~~~~~~~~~</p>
+      <h3>Hello, I'm Nick Cody</h3>
+      <p>~~~~~~~~~~~~~~~</p>
       <p class="lead">I'm a computer science student and aspiring developer.</p>
       <p class="lead">
         Check out my <a href="blog.html">blog</a> if you're intrigued.
@@ -76,7 +84,7 @@
 
     <footer class="mt-auto text-white-50">
       <div >
-        <nav class="nav nav-masthead justify-content-center">
+        <!-- <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
 
           <a class="nav-link" href="#">Projects</a>
@@ -84,8 +92,12 @@
 
           <a href="https://github.com/nocody" ><img  src="images/GitHub-Mark-Light-32px.png" alt="Github"></a>
           <a href="https://www.linkedin.com/in/njcody/" ><img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px"></a>
-        </nav>
+        </nav> -->
+        <p>~~~~~~~~~~~~~~~</p>
+        <a href="https://github.com/nocody" ><img  src="images/GitHub-Mark-Light-32px.png" alt="Github"></a>
 
+        <a href="https://www.linkedin.com/in/njcody/" ><img  src="images/LI-In-Bug.png" alt="LinkedIn" width="32px" height="32px"></a>
+        <!-- <p>~~~~~~~~~~~~~~~</p> -->
       </div>
     </footer>
   </div>
