--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </header>
 
     <main class="px-3 justify-content-center">
-      <h1 class= "justify-content-center">Way to get wripped!</h1>
+      <h1 class= "justify-content-center">Way to get ripped!</h1>
       <img class="circleicon justify-content-center" src="images/IMG_3895.jpg" alt="goblin king">
       <p>~~~~~~~~~~~~~~~</p>
       <h3>Hello, I'm Nick Cody</h3>
