--- a/play.html
+++ b/play.html
@@ -5,54 +5,79 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nick Cody</title>
+
     <!-- Bootstrap CSS -->
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <title>Mess Around</title>
     <link rel="stylesheet" href="styles/master.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
 
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
 
 
     <!-- Custom styles for this template -->
     <link href="styles/cover.css" rel="stylesheet">
     <link href="styles/master.css" rel="stylesheet">
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       function on() {
         document.getElementById("overlay").style.display = "block";
       }
 
       function off() {
         document.getElementById("overlay").style.display = "none";
-      } -->
-    <!-- </script> -->
+      }
+    </script>
 
   </head>
-  <bodyid ="landing">
-  <!-- <div id="overlay">
-    <h2>RIP ME</h2> -->
-    <!-- <a href="#" class="btn btn-sm btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
+  <body id ="landing">
+  <div id="overlay">
+    <!-- <h2>RIP ME</h2> -->
+    <div align="left">
+      <a href="#" class="btn btn-sm btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
+    </div>
+
     <canvas id="canvas"></canvas>
   </div>
   <!-- Cover template -->
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
       <!-- <header class="mb-auto"> -->
-      <!-- <header class="mb-auto">
-        <div>
-          <h3 class="float-md-start mb-0">Hello, I'm Nick Cody</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
+      <header class="mb-auto">
+        <div >
+          <h2 textc="#0B151E">RIP ME</h2>
+          <!-- <div id="overlay">
+            <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white" onclick="off()">ENOUGH!</a>
+            <canvas id="canvas"></canvas>
+          </div> -->
+          <!-- <h3 class="float-md-start mb-0">Hello, I'm Nick Cody</h3> -->
+          <!-- <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#">Projects</a>
-            <a class="nav-link" href="blog.html">Blog</a>
-          </nav>
+            <a class="nav-link" href="#">Contact</a>
+          </nav> -->
+          <!-- <canvas id="canvas"></canvas> -->
+          <!-- <p>~~~~~~~~~~~~~~~</p> -->
+
         </div>
-      </header> -->
+      </header>
 
     <main class="px-3 justify-content-center">
-      <!-- <h1 class= "justify-content-center">Way to get ripped!</h1> -->
+      <h1 class= "justify-content-center">Way to get ripped!</h1>
       <img class="circleicon justify-content-center" src="images/IMG_3895.jpg" alt="goblin king">
       <p>~~~~~~~~~~~~~~~</p>
       <h3>Hello, I'm Nick Cody</h3>
@@ -64,8 +89,7 @@
       </p>
     </main>
 
-    <!-- <footer class="mt-auto text-white-50"> -->
-    <footer>
+    <footer class="mt-auto text-white-50">
       <div >
         <!-- <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -127,5 +151,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/Cloth.js"></script>
 
+    <!-- <script type="text/javascript">
+      function on() {
+        document.getElementById("overlay").style.display = "block";
+      }
 
+      function off() {
+        document.getElementById("overlay").style.display = "none";
+      }
+    </script> -->
+  </body>
 </html>
